[gd_scene load_steps=8 format=2]

[ext_resource path="res://Imports/crafting.png" type="Texture" id=1]
[ext_resource path="res://Imports/Thems/fonts/kenney_mini_square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Objects/craftingplastic.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 81.0247

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 2

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 34
font_data = ExtResource( 2 )

[node name="craftingplastic" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.423529, 0, 1 )
material = SubResource( 2 )
scale = Vector2( 0.515, 0.4375 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = -114.0
margin_top = -123.0
margin_right = 8.0
margin_bottom = -97.0
rect_scale = Vector2( 1.88, 1.84 )
custom_fonts/font = SubResource( 3 )
text = "Creat Plastic"

[node name="message" type="Panel" parent="."]
margin_left = -91.0
margin_top = -158.0
margin_right = 100.0
margin_bottom = -44.0

[node name="Label" type="Label" parent="message"]
margin_right = 189.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 4 )
text = "  You need 
    Plastic
"

[connection signal="body_entered" from="." to="." method="_on_craftingplastic_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_craftingplastic_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
